rtest/tests/jsr335/Semantics/LambdaExpressions/InnerClasses/ShouldCompile/syntax15/Test.java
// .result=COMPILE_PASS


public class Test {		
	public static void main(String[] args) {
		int a = 5;
		class InnerClass {
			int b;
			{
				b = a;
			}
		}

    }

}